--- a/DiarioDeClasse.API/appsettings.json
+++ b/DiarioDeClasse.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Data Source=MATHEUS-DESKTOP;Initial Catalog=DiarioDeClasse;User ID=sistema;Password=123456;Encrypt=False"
+    "SqlServer": "Data Source=diariodeclasseapi-database-1;Initial Catalog=DiarioDeClasse;User ID=sa;Password=SenhaDoBancoDeDados01;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
