Configuraçãozinha do CORS

--- a/.gitignore
+++ b/.gitignore
@@ -409,3 +409,6 @@ obj/
 /wwwroot/node_modules
 
 # End of https://www.toptal.com/developers/gitignore/api/csharp,dotnetcore
+DiarioDeClasse.API/appsettings.json
+.vscode/launch.json
+.vscode/tasks.json
