--- a/DiarioDeClasse.API/appsettings.Development.json
+++ b/DiarioDeClasse.API/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
+  "ConnectionStrings": {
+    "SqlServer": "Data Source=localhost,1433;Initial Catalog=DiarioDeClasse;User ID=sa;Password=SenhaDoBancoDeDados01;Encrypt=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "alskjdlkajsdlkajslkdjaldjioqwjda~çlsdkas123123123",
+    "Issuer": "ziuquiz",
+    "Audience": "ziuquiz"
   }
 }
